Archive2/a3/725d13bc9da7b8/output
In file included from /usr/include/c++/4.8/array:35:0,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp: In function 'int main()':
main.cpp:8:5: error: 'array' is not a member of 'std'
     std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
     ^
main.cpp:8:16: error: expected primary-expression before 'int'
     std::array<int, 10> s = {5, 7, 4, 2, 8, 6, 1, 9, 0, 3}; 
                ^
main.cpp:8:16: error: expected ';' before 'int'
main.cpp:11:15: error: 's' was not declared in this scope
     std::sort(s.begin(), s.end());
               ^
main.cpp:12:18: error: range-based 'for' loops are not allowed in C++98 mode
     for (int a : s) {
                  ^
main.cpp:19:18: error: range-based 'for' loops are not allowed in C++98 mode
     for (int a : s) {
                  ^
main.cpp:32:18: error: range-based 'for' loops are not allowed in C++98 mode
     for (int a : s) {
                  ^
main.cpp:40:5: error: lambda expressions only available with -std=c++11 or -std=gnu++11
     });
     ^
main.cpp:41:18: error: range-based 'for' loops are not allowed in C++98 mode
     for (int a : s) {
                  ^
